--- a/apple/index.html
+++ b/apple/index.html
@@ -53,31 +53,33 @@
   <div style="height: 1600px;"></div>
 </body>
 <script>
-  // ----------------------------动画1
-  let animation1 = document.querySelectorAll('.animation1')
   // 视窗高度
   let clientHeight = document.documentElement.clientHeight
   // 开始动画的位置
   let animPosition = clientHeight/2 - 100
 
-  // ----------------------------动画2
-  //获取父元素
-  let anima2Wrapper = document.querySelector('.animation2-wrapper');
-  
-  let a2List = document.querySelectorAll('.anima2')
-  
-  window.addEventListener('scroll', () => {
-    // ---------------------------第一个动画效果
-    for(let i=0; i<animation1.length;i++){
-      if(animation1[i].getBoundingClientRect().top > animPosition - animation1[i].offsetHeight
-      && animation1[i].getBoundingClientRect().top < animPosition){
-        animation1[i].style.color = 'red'
+  // ----------------------------动画1
+  // 要移动的
+  let a1List = document.querySelectorAll('.animation1')
+  // 动画1
+  function animation1fn(){
+    for(let i=0; i<a1List.length;i++){
+      if(a1List[i].getBoundingClientRect().top > animPosition - a1List[i].offsetHeight
+      && a1List[i].getBoundingClientRect().top < animPosition){
+        a1List[i].style.color = 'red'
       } else {
-        animation1[i].style.color = '#000'
+        a1List[i].style.color = '#000'
       }
     }
-    
-    // ----------------------------第二个动画
+  }
+
+  // ----------------------------动画2
+  // 获取父元素
+  let anima2Wrapper = document.querySelector('.animation2-wrapper');
+  // 要移动的
+  let a2List = document.querySelectorAll('.anima2')
+  // 动画2
+  function animation2fn(){
     // 距离视窗高度
     let a2WrapperTop = anima2Wrapper.getBoundingClientRect().top;
     if (a2WrapperTop <= animPosition
@@ -96,7 +98,42 @@
         row.style.setProperty('--progress', progress)
       }
     }
-  })
+  }
+  const animation = function(){
+    animation1fn()
+    animation2fn()
+  }
+  const throttleHandle = throttle(animation, 16) // 节流
+  function throttle(fn, delay) {
+    let args = arguments,
+        context = this,
+        timer = null,
+        remaining = 0,
+        previous = new Date();
+
+    return function(ttt) {
+        let now = new Date();
+        let args = arguments
+        remaining = now - previous;
+
+        if (remaining >= delay) {
+            if (timer) {
+                clearTimeout(timer);
+            }
+
+            fn.apply(context, args);
+            previous = now;
+        } else {
+            if (!timer) {
+                timer = setTimeout(function() {
+                    fn.apply(context, args);
+                    previous = new Date();
+                }, delay - remaining);
+            }
+        }
+    };
+  }
+  window.addEventListener('scroll', throttleHandle)
 
 
 </script>
